--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -1,9 +1,10 @@
 
-FLAG_CFG = -C ../cfg/orao.cfg
-LIB_FILE = ../runtime/orao.lib
-INCLUDE_FLAGS = -I ../runtime
+include ../shared.mk
+
+FLAG_CFG = -C ../../cfg/orao.cfg
+
 CA65_FLAGS = -t none --debug-info
-CC65_FLAGS = -t none $(FLAG_CFG) --debug-info -O -Oi -Or -Os --static-locals --register-vars --add-source -I ../runtime/include
+CC65_FLAGS = -t none $(FLAG_CFG) --debug-info -O -Oi -Or -Os --static-locals --register-vars --add-source -I $(RUNTIME_DIR)/include
 
 DA65_FLAGS = --comments 3 --start-addr '$$0400'
 
@@ -11,9 +12,6 @@ TARGETS = $(patsubst %.c,%,$(wildcard *.c))
 
 all: $(patsubst %,%.prg.dis,$(TARGETS))
 	@echo "DONE"
-
-lib:
-	cd ../runtime; make clean all
 
 %.o: %.c
 	cl65 $(CC65_FLAGS) -l $*.lst -c $<
@@ -27,7 +25,7 @@ lib:
 	ls -l $@
 
 %.prg.dis: %.prg
-	../../dxa-0.1.4/dxa -N -a dump $< > $@
+	$(DXA_BIN) -N -a dump $< > $@
 
 clean:
-	rm -f *.prg *.dis *.map *.dbg *.bin *.s *.o
+	rm -f *.prg *.dis *.map *.dbg *.bin *.s *.o *.lst
