chore: update Makefiles

--- a/examples/asm/Makefile
+++ b/examples/asm/Makefile
@@ -8,7 +8,10 @@ DA65_FLAGS = --comments 3 --start-addr '$$0400'
 
 TARGETS = $(patsubst %.s,%,$(wildcard *.s))
 
-all: $(patsubst %,%.prg.dis,$(TARGETS))
+all: $(patsubst %,%.prg,$(TARGETS))
+	@echo "DONE"
+
+all-dis: $(patsubst %,%.prg.dis,$(TARGETS))
 	@echo "DONE"
 
 %.o: %.s
